--- a/_variables.scss
+++ b/_variables.scss
@@ -1,11 +1,11 @@
-$sCyan: hsl(174, 77%, 80%);
-$stCyan: hsl(174, 86%, 45%);
-$lgRed: hsl(14, 92%, 95%);
-$lRed: hsl(15, 100%, 70%);
-$pBlue: hsl(226, 100%, 87%);
-$vpBlue: hsl(226, 100%, 87%);
-$lgBlueS: hsl(224, 65%, 95%);
-$lgBlueT: hsl(223, 50%, 87%);
-$gBlue: hsl(225, 20%, 60%);
+$sliderBar: hsl(174, 77%, 80%);
+$sliderBg: hsl(174, 86%, 45%);
+$discountBg: hsl(14, 92%, 95%);
+$dText: hsl(15, 100%, 70%);
+$CTA: hsl(226, 100%, 87%);
+$main: hsl(230, 100%, 99%);
+$eSlider: hsl(224, 65%, 95%);
+$toggle: hsl(223, 50%, 87%);
+$text: hsl(225, 20%, 60%);
 $ddBlue: hsl(227, 35%, 25%);
 $fontFam: "Manrope", sans-serif;
