--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
 
 header {
   text-align: center;
+  margin-top: 100px;
   color: #858fad;
 }
 
@@ -50,20 +51,67 @@ h2 {
   color: #293356;
 }
 
-#toggle {
-  width: 45px;
-  height: 25px;
-  background-color: #cdd7ee;
-  border-radius: 50px;
+/* The switch - the box around the slider */
+.switch {
   position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 30px;
 }
 
-#toggle::after {
+/* Hide default HTML checkbox */
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* The slider */
+.slider {
   position: absolute;
-  height: 10px;
-  width: 10px;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
   content: "";
-  color: black;
+  height: 22px;
+  width: 22px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #10d5c2;
+}
+
+input:focus + .slider {
+  -webkit-box-shadow: 0 0 1px #10d5c2;
+          box-shadow: 0 0 1px #10d5c2;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
 }
 
 #start {
@@ -89,6 +137,13 @@ h2 {
   width: 100%;
   margin-top: 20px;
   border-bottom: 2pt solid #fafbff;
+}
+
+#bar {
+  width: 90%;
+  height: 7px;
+  background-color: #eaeefb;
+  border-radius: 50px;
 }
 
 @media (max-width: 700px) {
@@ -129,6 +184,12 @@ h2 {
   }
   #card {
     width: 100%;
+  }
+  #plan {
+    margin-top: 10px;
+  }
+  #bar {
+    margin: auto;
   }
 }
 /*# sourceMappingURL=styles.css.map */
