--- a/styles.scss
+++ b/styles.scss
@@ -6,12 +6,13 @@ body {
 }
 header {
   text-align: center;
-
+  margin-top: 100px;
   color: $text;
 }
 h1 {
   font-size: 20px;
   margin-bottom: 0;
+
 }
 h2 {
   font-size: 15px;
@@ -34,11 +35,13 @@ h2 {
   color: $text;
   font-size: 12px;
   display: grid;
+
 }
 .wrapper {
   background-color: white;
   text-align: center;
   margin: 50px auto;
+ 
 }
 #price {
   font-size: 30px;
@@ -46,23 +49,69 @@ h2 {
   color: $ddBlue;
 }
 
-
-#toggle {
-  width: 45px;
-  height: 25px;
-  background-color: $toggle;
-  border-radius: 50px;
-  position: relative;
-
-  &::after{
-      position: absolute;
-      height: 10px;
-      width: 10px;
-      content: "";
-      color: black;
-      
+/* The switch - the box around the slider */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 30px;
   }
-}
+  
+  /* Hide default HTML checkbox */
+  .switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  /* The slider */
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 22px;
+    width: 22px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: $sliderBg;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px $sliderBg;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
 #start {
   background-color: $ddBlue;
   color: $CTA;
@@ -86,6 +135,13 @@ font-size: 12px;
   margin-top: 20px;
   
   border-bottom: 2pt solid $main;
+}
+
+#bar{
+    width: 90%;
+    height: 7px;
+    background-color: $eSlider;
+    border-radius: 50px;
 }
 @media (max-width: 700px) {
   .wrapper {
@@ -116,5 +172,11 @@ font-size: 12px;
 
   #card {
     width: 100%;
+  }
+  #plan{
+      margin-top: 10px;
+  }
+  #bar{
+      margin:auto;
   }
 }
