--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,16 @@ h2 {
   text-align: center;
 }
 
+.check {
+  background: url("images/icon-check.svg");
+  height: 10px;
+  width: 10px;
+  background-size: contain;
+  background-position: center;
+  display: inline-block;
+  margin-right: 5px;
+}
+
 #sign-up {
   font-size: 15px;
   line-height: 27px;
@@ -55,7 +65,7 @@ h2 {
 .switch {
   position: relative;
   display: inline-block;
-  width: 60px;
+  width: 55px;
   height: 30px;
 }
 
@@ -75,8 +85,8 @@ h2 {
   right: 0;
   bottom: 0;
   background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .slider:before {
@@ -87,8 +97,8 @@ h2 {
   left: 4px;
   bottom: 4px;
   background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 input:checked + .slider {
@@ -140,9 +150,44 @@ input:checked + .slider:before {
 }
 
 #bar {
+  -webkit-appearance: none;
   width: 90%;
-  height: 7px;
+  height: 25px;
   background-color: #eaeefb;
+  border-radius: 50px;
+  position: relative;
+  outline: none;
+}
+
+#bar::-webkit-slider-thumb {
+  cursor: pointer;
+  background-color: #10d5c2;
+  -webkit-appearance: none;
+          appearance: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 50px;
+  background-image: url("images/icon-slider.svg");
+  background-repeat: no-repeat;
+  background-position: center;
+  --progress-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2) inset;
+  --progress-flll-shadow: pink;
+  --fill-color: linear-gradient(to right, LightCyan, blue);
+  --thumb-shadow: 0 0 4px rgba(0, 0, 0, 0.3),
+    -3px 9px 9px rgba(255, 255, 255, 0.33) inset,
+    -1px 3px 2px rgba(255, 255, 255, 0.33) inset,
+    0 0 0 99px var(--primary-color) inset;
+}
+
+.feature {
+  display: inline;
+}
+
+#discount {
+  background-color: #feece7;
+  color: #ff8c66;
+  font-weight: 800;
+  padding: 2px 7px;
   border-radius: 50px;
 }
 
@@ -161,6 +206,12 @@ input:checked + .slider:before {
         -ms-flex-align: center;
             align-items: center;
     max-width: 400px;
+  }
+  h2 {
+    margin-bottom: 50px;
+  }
+  #card {
+    max-width: 340px;
   }
   #sign-up {
     width: 65%;
@@ -186,10 +237,13 @@ input:checked + .slider:before {
     width: 100%;
   }
   #plan {
-    margin-top: 10px;
+    margin-top: 30px;
   }
   #bar {
     margin: auto;
+  }
+  #pricing {
+    margin: 20px 0;
   }
 }
 /*# sourceMappingURL=styles.css.map */
