--- a/styles.scss
+++ b/styles.scss
@@ -1,8 +1,15 @@
 @import "./variables";
-
+@mixin flex{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    justify-self: center;
+    width: 100%;
+}
 body {
   background-color: $main;
   font-family: $fontFam;
+  height: 100vh;
 }
 header {
   text-align: center;
@@ -46,6 +53,7 @@ h2 {
   background-color: white;
   text-align: center;
   margin: 50px auto;
+
 }
 #price {
   font-size: 30px;
@@ -79,9 +87,8 @@ h2 {
   background-color: #ccc;
   -webkit-transition: 0.4s;
   transition: 0.4s;
-}
 
-.slider:before {
+&:before {
   position: absolute;
   content: "";
   height: 22px;
@@ -92,7 +99,7 @@ h2 {
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
-
+}
 input:checked + .slider {
   background-color: $sliderBg;
 }
@@ -128,6 +135,7 @@ input:checked + .slider:before {
   &:hover {
     cursor: pointer;
     color: white;
+    transition: color 0.1s ease;
   }
 }
 #options {
@@ -142,15 +150,17 @@ input:checked + .slider:before {
 
 #bar {
   -webkit-appearance: none;
-  width: 90%;
+
   height: 25px;
   background-color: $eSlider;
   border-radius: 50px;
   position: relative;
   outline: none;
-
+  -webkit-transition: 1s;
+  transition: all 1s ease;
   &::-webkit-slider-thumb {
     cursor: pointer;
+    transition: all 1s ease;
     background-color: $sliderBg;
     appearance: none;
     width: 40px;
@@ -159,10 +169,12 @@ input:checked + .slider:before {
     background-image: url("images/icon-slider.svg");
     background-repeat: no-repeat;
     background-position: center;
-  
-
-  
-  
+  }
+  #term{
+   
+      font-size: 25px;
+      
+  }
 }
 .feature {
   display: inline;
@@ -200,11 +212,8 @@ input:checked + .slider:before {
     margin: 20px 0 30px 0;
   }
   #options {
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    align-items: center;
     padding: 20px 0;
+    @include flex();
   }
 
   #card {
@@ -214,10 +223,75 @@ input:checked + .slider:before {
     margin-top: 30px;
   }
   #bar {
-    margin: auto;
+    margin: auto;  width: 90%;
   }
 
   #pricing {
     margin: 20px 0;
   }
+}
+@media(min-width:700px){
+  .wrapper{
+width: 50%;
+padding:50px 30px 0 30px;
+
+max-width: 600px;
+  }
+  #card{
+    margin-top: 20px;  
+  }
+    #top{
+        width: 100%;
+        display: grid;
+        height: 300px;
+    }
+   #pricing{
+  order: 2;
+  display: inline-block;
+  grid-column-start: 2;
+  grid-column-end: 3;
+   }
+   h2{
+       order: 1;
+       grid-column-start: 1;
+       grid-column-end: 2;
+       display: inline;   
+   }
+
+   .slidecontainer{
+       order:3;
+    width: 90%;
+    max-width: 700px;
+    justify-self: center;
+    grid-column-start: 1;
+    grid-column-end: 3;
+   }
+   #bar{
+       width: 100%;   
+   }
+   #options{
+       order: 4;
+       display: flex;
+width: 70%;
+height: fit-content;
+grid-column-start: 1;
+grid-column-end: 3;
+@include flex();
+   }
+#plan{
+    height: 200px;
+ @include flex();
+}
+#start{
+    padding: 15px;
+}
+}
+
+@media (min-height:1000px){
+    .wrapper{
+    transform: translateY(30%);
+    }
+    #intro h1,p{
+        font-size:2em;
+    }
 }
