--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ header {
 }
 
 h1 {
-  font-size: 20px;
+  font-size: 25px;
+  color: #293356;
   margin-bottom: 0;
+  font-weight: 800;
 }
 
 h2 {
@@ -340,6 +342,9 @@ input:checked + .slider:before {
   #start {
     padding: 15px;
   }
+  #options {
+    max-width: 500px;
+  }
 }
 
 @media (min-height: 1000px) {
@@ -347,7 +352,8 @@ input:checked + .slider:before {
     -webkit-transform: translateY(30%);
             transform: translateY(30%);
   }
-  #intro h1, p {
+  #intro h1,
+  p {
     font-size: 2em;
   }
 }
