--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,28 @@
 body {
-  background-color: #fafbff;
   font-family: "Manrope", sans-serif;
-  height: 100vh;
+  background: url("images/bg-pattern.svg");
+  background-repeat: no-repeat;
 }
 
 header {
   text-align: center;
   margin-top: 100px;
   color: #858fad;
+  position: relative;
+}
+
+#circles {
+  background-image: url("images/pattern-circles.svg");
+  height: 150px;
+  width: 150px;
+  background-size: contain;
+  position: absolute;
+  background-repeat: no-repeat;
+  top: -50px;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 h1 {
@@ -56,6 +71,9 @@ h2 {
   background-color: white;
   text-align: center;
   margin: 50px auto;
+  border-radius: 10px;
+  -webkit-filter: drop-shadow(10px 5px 10px #eaeefb);
+          filter: drop-shadow(10px 5px 10px #eaeefb);
 }
 
 #price {
@@ -161,9 +179,6 @@ input:checked + .slider:before {
   border-radius: 50px;
   position: relative;
   outline: none;
-  -webkit-transition: 1s;
-  -webkit-transition: all 1s ease;
-  transition: all 1s ease;
 }
 
 #bar::-webkit-slider-thumb {
@@ -181,7 +196,12 @@ input:checked + .slider:before {
   background-position: center;
 }
 
-#bar #term {
+#bar::-webkit-slider-thumb:active {
+  cursor: -webkit-grab;
+  cursor: grab;
+}
+
+#term {
   font-size: 25px;
 }
 
@@ -195,6 +215,7 @@ input:checked + .slider:before {
   font-weight: 800;
   padding: 2px 7px;
   border-radius: 50px;
+  margin-left: 5px;
 }
 
 @media (max-width: 700px) {
@@ -226,6 +247,7 @@ input:checked + .slider:before {
   }
   #start {
     margin: 20px 0 30px 0;
+    font-size: 13px;
   }
   #options {
     padding: 20px 0;
