--- a/styles.scss
+++ b/styles.scss
@@ -10,6 +10,7 @@ body {
   font-family: $fontFam;
   background: url("images/bg-pattern.svg");
   background-repeat: no-repeat;
+  background-size: contain;
 }
 header {
   text-align: center;
